Async service connection with the store

--- a/src/assets/styles/components/_morfologo.scss
+++ b/src/assets/styles/components/_morfologo.scss
@@ -15,7 +15,7 @@
     display: table;
 }
 
-.morfo-logo-holder h1{
+.morfo-logo-holder div{
     display: table-cell;
     vertical-align: middle;
     font-family: "metropolis";
